--- a/templates/admin_event_new.html
+++ b/templates/admin_event_new.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <div class="card" style="max-width: 720px; margin: 0 auto;">
-    <h1 style="margin-bottom: 1.5rem;">Neuer Filmabend</h1>
+    <h1 class="section-title" style="margin-bottom: 1.5rem;">Neuer Filmabend</h1>
     <form method="post">
       <div>
         <label for="letterboxd_url">Letterboxd-Link</label>
